2006-05-12: 
	- space checking improved (ubuntu: #43948)
        - translation updates
2006-05-09: 
        - upload
2006-05-08: 
	- fix error when asking for media-change (ubuntu: 43442,43728)
2006-05-02: 
        - upload
2006-04-28:
        - add more sanity checking, if no valid mirror is found in the 
          sources.list ask for "dumb" rewrite
        - if nothing valid was found after a dumb rewrite, add official
          sources
        - don't report install TIMEOUT over and over in the log
        - report what package caused a install TIMEOUT
2006-04-27:
	- add a additonal sanity check after the rewriting of the sources.list
          (check for BaseMetaPkgs still in the cache)
        - on abort reopen() the cache to force writing a new 
          /var/cache/apt/pkgcache.bin
        - use a much more compelte mirror list (based on the information 
          from https://wiki.ubuntu.com/Archive)
2006-04-25:
	- make sure that DistUpgradeView.getTerminal().call() actually
          waits until the command has finished (dpkg --configure -a)
2006-04-18:
	- add logging to the sources.list modification code
	- general logging improvements (thanks to Xavier Poinsard)